[gd_scene load_steps=2 format=2]

[ext_resource path="res://menu/pausemenu/pausemenu.gd" type="Script" id=1]

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
layer = 128
script = ExtResource( 1 )

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Margin"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0.0156863, 0.117647, 0.552941 )

[node name="VBox" type="VBoxContainer" parent="Margin"]
margin_left = 444.0
margin_right = 580.0
margin_bottom = 600.0
size_flags_horizontal = 4
alignment = 1

[node name="Label" type="Label" parent="Margin/VBox"]
margin_top = 245.0
margin_right = 136.0
margin_bottom = 259.0
text = "PAUSED"
align = 1

[node name="ResumeBtn" type="Button" parent="Margin/VBox"]
margin_left = 37.0
margin_top = 263.0
margin_right = 98.0
margin_bottom = 283.0
size_flags_horizontal = 4
text = "resume"

[node name="RestartBtn" type="Button" parent="Margin/VBox"]
margin_left = 41.0
margin_top = 287.0
margin_right = 95.0
margin_bottom = 307.0
size_flags_horizontal = 4
text = "restart"

[node name="QuitgameBtn" type="Button" parent="Margin/VBox"]
margin_top = 311.0
margin_right = 136.0
margin_bottom = 331.0
size_flags_horizontal = 4
text = "back to gameselect"

[node name="QuitToDesctopBtn" type="Button" parent="Margin/VBox"]
margin_left = 14.0
margin_top = 335.0
margin_right = 122.0
margin_bottom = 355.0
size_flags_horizontal = 4
text = "quit Suffragium"

[connection signal="pressed" from="Margin/VBox/ResumeBtn" to="." method="hide"]
[connection signal="pressed" from="Margin/VBox/RestartBtn" to="." method="_on_restartbtn_pressed"]
[connection signal="pressed" from="Margin/VBox/QuitgameBtn" to="." method="_on_quitgamebtn_pressed"]
[connection signal="pressed" from="Margin/VBox/QuitToDesctopBtn" to="." method="_on_quittodesctopbtn_pressed"]
